FFR-Update 26/09/2023